[gd_scene load_steps=17 format=2]

[ext_resource path="res://person/person.png" type="Texture" id=1]
[ext_resource path="res://person/Person.gd" type="Script" id=2]
[ext_resource path="res://misc/shadows.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.1984

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.55449
height = 8.65831

[sub_resource type="Animation" id=3]
resource_name = "IdleDown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleUp"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=9]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=7]
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 407.5, 63.5 )
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="Person" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 2.93585 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.06066, -20.7713 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 24.572, -5.39169 )
collision_layer = 2147483650
collision_mask = 2

[node name="SpreadRadius" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -24.572, -33.5876 )
shape = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.10699 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 3 )
anims/IdleLeft = SubResource( 5 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 8 )
parameters/Idle/blend_position = Vector2( 0, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
